syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/customer-svc/pb";

service CompanyService{
  rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse);
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse);
  rpc GetCompanys(GetCompaniesRequest) returns (GetCompaniesResponse);
  rpc UpdateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse);
  rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse);
}

message CreateCompanyRequest{
  string name = 1;
  string imageUrl = 2;
}

message CreateCompanyResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetCompanyRequest{
  int64 id = 1;
}

message GetCompanyResponse{
  int64 id = 1;
  string name = 2;
  string imageUrl = 3;
  int64 status = 4;
  string error = 5;
}

message GetCompaniesRequest{
  int32 limit = 1;
  int32 offset = 2;
}

message GetCompaniesResponse{
  repeated GetCompanyResponse companies = 1;
  int64 status = 2;
  string error = 3;
}

message UpdateCompanyRequest{
  int64 id = 1;
  string name = 2;
  string imageUrl = 3;
}

message UpdateCompanyResponse{
  int64 status = 1;
  string error = 2;
}

message DeleteCompanyRequest{
  int64 id = 1;
}

message DeleteCompanyResponse{
  int64 status = 1;
  string error = 2;
}
